<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="location">Location</string>
    <string name="deg_down">°C↓</string>
    <string name="deg_up">°C↑</string>
    <string name="humidity">Humidity</string>
    <string name="percent">%</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="day_time">Daytime</string>
    <string name="_13h_1m">13h 1m</string>
    <string name="_7_05_pm">7:05 PM</string>
    <string name="todo">TODO</string>
    <string name="mbar">mBar</string>
    <string name="m_s">m/s</string>
    <string name="sunday_19_may_2019_4_30pm">Sunday, 19 May 2019 | 4:30PM</string>
</resources>